--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,48 @@ jobs:
     name: Build and Deploy Spring boot app
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v3
+
+
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: 17
+
+
       - name: Unit Tests
         run: mvn -B test --file pom.xml
+
+
       - name: Build the application
         run: |
           mvn clean
           mvn -B package --file pom.xml
+          
+
+      - name: Build Docker Image
+        uses: actions/build-push-action@v2
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-project:today
+
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+
+      - name: Push to Docker Hub
+        uses: actions/build-push-action@v2
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-project:today
