--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 #smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=benchikhladhariachraf@gmail.com
-spring.mail.password=terv jwco aioo vptf
+spring.mail.username=***************
+spring.mail.password=***************
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
